--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -19,6 +20,8 @@
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.0.0",
     "postcss": "^8.0.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.3"
   }
